# ipfp-hpc-cluster

./: .gitignore  CMakeLists.txt  LICENSE  README.md
hpc_scripts/: run-1-process.sh  run-16-process-ppn-1.sh  run-16-process-ppn-16.sh  run-2-process-ppn-1.sh  run-2-process-ppn-2.sh  run-4-process-ppn-1.sh  run-4-process-ppn-4.sh  run-8-process-ppn-1.sh  run-8-process-ppn-8.sh
src/: dense_distribution.c  dense_distribution.h  dense_matrix.c  dense_matrix.h  input.c  input.h  log_0.txt  log_1.txt  main-ipfp.c  matrix.h  matrix2.txt  matrix3.txt  matrix_partition.c  matrix_partition.h  message_tag.h  mpiutils.c  mpiutils.h  permutation.c  permutation.h  smallmatrix.h  sparse_matrix.c  sparse_matrix.h  submatrix.c  submatrix.h  tmp.c
src/data_visualization/: performance_graph.ipynb
src/utils/: extract_time_result.py  format_dense.py  format_sparse.py  sample_file.txt  useful_code.c
